# textbook-problem-detection

./: .env  .env.prod.example  .gitattributes  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: deploy-production.yaml  deploy-staging.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: jobs.py  main.py  schemas.py  settings.py
backend/arq_worker/: worker.py
backend/research/: .dockerignore  .gitignore  README.md  main.py  mlflow_utils.py
backend/research/detector/: __init__.py  config.py  llm.py  models.py  pdf_utils.py  pipeline.py  report_models.py  surya_utils.py  visualizer.py
backend/research/run_artifacts/outputs/: problem_assignments.json
backend/research/run_artifacts/outputs/llm_raw/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json
backend/research/run_artifacts_old/outputs/: problem_assignments.json
backend/research/run_artifacts_old/outputs/llm_raw/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json
backend/scripts/: lint.sh
backend/tests/: test_backend_integration.py
frontend/: .gitignore  Dockerfile  README.md  chakradocsfull.txt  index.html  nginx-backend-not-found.conf  nginx-global.conf  openapi-ts.config.ts  package-lock.json  package.json  tanstack.config.ts  tsconfig.json  tsconfig.node.json
frontend/src/: env.d.ts  main.tsx  routeTree.gen.ts  styles.css
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: ProblemCanvas.tsx  ProblemComment.tsx
frontend/src/lib/: api.ts  jobs.ts
frontend/src/routes/: __root.tsx  index.tsx  job.$jobId.tsx
scripts/: generate-client.sh
